--- a/lumen/composer.json
+++ b/lumen/composer.json
@@ -25,6 +25,6 @@
 		"fzaninotto/faker": "^1.4",
 		"mockery/mockery": "^1.0",
 		"phpmd/phpmd": "^2.6",
-		"phpunit/phpunit": "^8.0"
+		"phpunit/phpunit": "^8.0",
 	}
 }
